home: show poster on mouseout and improve landscape view

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -111,3 +111,10 @@
     width: 100%;
   }
 }
+
+@media (orientation: landscape) and (max-width: 768px) {
+  .videoContainer {
+    height: calc((100vh - var(--header-height)) / 2);
+    min-height: 300px;
+  }
+}
