--- a/app/page.module.css
+++ b/app/page.module.css
@@ -114,7 +114,7 @@
 
 @media (orientation: landscape) and (max-width: 768px) {
   .videoContainer {
-    height: calc((100vh - var(--header-height)) / 2);
-    min-height: 300px;
+    height: calc(100vh - var(--header-height));
+    min-height: 15rem;
   }
 }
